First attempt of adding channel page. IssueID: PM_4

--- a/channel1DV.html
+++ b/channel1DV.html
@@ -12,7 +12,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
         
         <!-- title of site -->
-        <title>Group1_Assignment</title>
+        <title>Channel 1</title>
 
         <!-- For favicon png -->
 		<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
@@ -100,10 +100,10 @@
 			            <!-- Collect the nav links, forms, and other content for toggling -->
 			            <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
 			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
-			                    <li class=" scroll active"><a href="#home">Home</a></li>
-			                    <li class="scroll"><a href="#works">About Us</a></li>
-			                    <li class="scroll"><a href="#explore">Live IoT Analytics</a></li>
-			                    <li class="scroll"><a href="#team">Team members</a></li>
+			                    <li><a href="index.html">Home</a></li>
+			                    <li><a href="index.html#works">About Us</a></li>
+			                    <li><a href="index.html#explore">Live IoT Analytics</a></li>
+			                    <li><a href="index.html#team">Team members</a></li>
 			                    <!--<li class="scroll"><a href="#blog">blog</a></li>-->
 			                    <!--<li class="scroll"><a href="#contact">contact</a></li>-->
 			                </ul><!--/.nav -->
@@ -118,12 +118,12 @@
 		<!-- top-area End -->
 
 		<!--welcome-hero start -->
-		<section id="home" class="welcome-hero">
+		<section id="home" class="welcome-data">
 			<div class="container">
 				<div class="welcome-hero-txt">
-					<h2>BEE3033<br>  Data Communication & Networks<br> Assignment </h2>
+					<h2>Channel 1 Data Visualizations</h2>
 					<p>
-						"Connecting Data, Powering Insights" 
+						Live IoT Analytics 
 					</p>
 				</div>
 				<!--<div class="welcome-hero-serch-box">
@@ -434,9 +434,9 @@
 			           	</div>
 			           	<div class="col-sm-9">
 			           		<ul class="footer-menu-item">
-			                    <li class="scroll"><a href="#works">About Us</a></li>
-			                    <li class="scroll"><a href="#explore">Live IoT Analytics</a></li>
-			                    <li class="scroll"><a href="#team">Team Members</a></li>
+			                    <li><a href="index.html#works">About Us</a></li>
+			                    <li><a href="index.html#explore">Live IoT Analytics</a></li>
+			                    <li><a href="index.html#team">Team Members</a></li>
 			                   <!--<li class="scroll"><a href="#blog">blog</a></li>-->
 			                </ul><!--/.nav -->
 			           	</div>
