Furthur enhancement on the channel 1 visualization page. IssueID: PM_5

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 			                    <i class="fa fa-bars"></i>
 			                </button>
-			                <a class="navbar-brand" href="index.html">UCSI University<br><span>BEE 3033</span></a>
+			                <a class="navbar-brand" href="https://www.ucsiuniversity.edu.my/">UCSI University<br><span>BEE 3033</span></a>
 
 			            </div><!--/.navbar-header-->
 			            <!-- End Header Navigation -->
@@ -245,7 +245,7 @@
 								<div class="single-explore-img">
 									<img src="assets/images/welcomeDV/Channel1.png" alt="explore image">
 									<div class="single-explore-img-info">
-										<button onclick="window.location.href='#'">View channel 1</button>
+										<button onclick="window.location.href='channel1DV.html'">View channel 1</button>
 										
 									</div>
 								</div>
@@ -283,7 +283,7 @@
 								<div class="single-explore-img">
 									<img src="assets/images/welcomeDV/Channel2.png" alt="explore image">
 									<div class="single-explore-img-info">
-										<button onclick="window.location.href='#'">View channel 2</button>
+										<button onclick="window.location.href='channel2DV.html'">View channel 2</button>
 										
 									</div>
 								</div>
