Another enhancement on the channel 1 visualization page. IssueID: PM_6

--- a/channel1DV.html
+++ b/channel1DV.html
@@ -184,6 +184,36 @@ Author: mwa0000024241858
 					<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2851826/charts/7?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&title=PM10+Correlation&type=line&xaxis=Time&yaxis=%C2%B5g%2Fm3"></iframe>
 					<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2851826/charts/8?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&title=PM%282.5-10%29+Correlation&type=line&xaxis=Time&yaxis=%C2%B5g%2Fm3"></iframe>
 					<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/apps/matlab_visualizations/607808"></iframe>
+					<br><br><br><br><br><br>
+
+					<div class="boxContainer">
+						<div class="box">
+							<b>Description:</b> This channel extracts data from a public channel on the amateur air pollution monitoring station 
+							in Skierniewice, Poland. Air pollution monitoring channel updates with PM10, PM2.5, and PM1 readings from LookO2, 
+							a Plantower PMS5003 based sensor. Computed AQI available.
+						</div>
+					</div>
+
+					<br><br><br>
+
+					<div class="boxContainer">
+						<div class="box">
+							<b>Description:</b> This channel extracts data from a public channel on the amateur air pollution monitoring station 
+							in Skierniewice, Poland. Air pollution monitoring channel updates with PM10, PM2.5, and PM1 readings from LookO2, 
+							a Plantower PMS5003 based sensor. Computed AQI available.
+						</div>
+					</div>
+
+					<br><br><br>
+
+					<div class="boxContainer">
+						<div class="box">
+							<b>Description:</b> This channel extracts data from a public channel on the amateur air pollution monitoring station 
+							in Skierniewice, Poland. Air pollution monitoring channel updates with PM10, PM2.5, and PM1 readings from LookO2, 
+							a Plantower PMS5003 based sensor. Computed AQI available.
+						</div>
+					</div>
+				
 				</div><!--/.section-header-->
 				<div class="explore-content">
 					<div class="row">
