Finalize webpage. IssueID: PM_10

--- a/channel1DV.html
+++ b/channel1DV.html
@@ -434,7 +434,7 @@ Author: mwa0000024241858
 					<div class="row">
 						<div class="col-sm-5">
 							<p>
-								&copy;copyright. developed by <a href="https://github.com/pasoncheam"><b>Pason Cheam Tung Huay</b></a>
+								Developed by <a href="https://github.com/pasoncheam"><b>Pason Cheam Tung Huay</b></a>
 							</p><!--/p-->
 						</div>
 						<div class="col-sm-7">
