--- a/channel2DV.html
+++ b/channel2DV.html
@@ -319,6 +319,12 @@ Author: mwa0000024241858
 									The NAQI for both PM10 and PM2.5 are calculated by us with the equation mentioned in the research paper. 
 									The result from our calculation shows a similar pattern to the AQI graph extracted from the public channel in
 									 ThingSpeak. 
+                                     <br><br>
+
+                                     All three graphs show periodic spikes in pollution levels, especially around the same dates. PM2.5 levels are 
+                                     significantly higher than PM10, highlighting a greater concern for fine particulate pollution. The AQI values 
+                                     are relatively lower compared to PM indices, but they still exhibit fluctuations. Potential reasons for pollution 
+                                     spikes include weather changes, increased human activities, or industrial emissions.
 
 						</div>
 					</div>
@@ -435,7 +441,7 @@ Author: mwa0000024241858
 					<div class="row">
 						<div class="col-sm-5">
 							<p>
-								&copy;copyright. developed by <a href="https://github.com/pasoncheam"><b>Pason Cheam Tung Huay</b></a>
+								Developed by <a href="https://github.com/pasoncheam"><b>Pason Cheam Tung Huay</b></a>
 							</p><!--/p-->
 						</div>
 						<div class="col-sm-7">
