Add additional downlaod report button. IssueID: PM_11

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 			                    <li class="scroll"><a href="#works">About Us</a></li>
 			                    <li class="scroll"><a href="#explore">Live IoT Analytics</a></li>
 			                    <li class="scroll"><a href="#team">Team members</a></li>
+								<li class="scroll"><a href="#downloadPdf">Download Report</a></li>
 			                    <!--<li class="scroll"><a href="#blog">blog</a></li>-->
 			                    <!--<li class="scroll"><a href="#contact">contact</a></li>-->
 			                </ul><!--/.nav -->
@@ -504,6 +505,7 @@
 			                    <li class="scroll"><a href="#works">About Us</a></li>
 			                    <li class="scroll"><a href="#explore">Live IoT Analytics</a></li>
 			                    <li class="scroll"><a href="#team">Team Members</a></li>
+								<li class="scroll"><a href="#downloadPdf">Download Report</a></li>
 			                   <!--<li class="scroll"><a href="#blog">blog</a></li>-->
 			                </ul><!--/.nav -->
 			           	</div>
