Fixed spelling error. IssueID: PM_12

--- a/channel1DV.html
+++ b/channel1DV.html
@@ -102,7 +102,7 @@
 			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 			                    <li><a href="index.html">Home</a></li>
 			                    <li><a href="channel2DV.html">Channel 2</a></li>
-								<li><a href="comparizon.html">Comparizon</a></li>
+								<li><a href="comparizon.html">Comparison</a></li>
 			                    <!--<li class="scroll"><a href="#blog">blog</a></li>-->
 			                    <!--<li class="scroll"><a href="#contact">contact</a></li>-->
 			                </ul><!--/.nav -->
@@ -425,7 +425,7 @@ Author: mwa0000024241858
 			           	<div class="col-sm-9">
 			           		<ul class="footer-menu-item">
 			                    <li><a href="channel2DV.html">Channel 2</a></li>
-								<li><a href="comparizon.html">Comparizon</a></li>
+								<li><a href="comparizon.html">Comparison</a></li>
 			                </ul><!--/.nav -->
 			           	</div>
 		           </div>
