--- a/index.html
+++ b/index.html
@@ -321,12 +321,12 @@
 								<div class="single-explore-img">
 									<img src="assets/images/welcomeDV/comparison.png" alt="explore image">
 									<div class="single-explore-img-info">
-										<button onclick="window.location.href='comparison.html'">comparizon</button>
+										<button onclick="window.location.href='comparison.html'">comparison</button>
 										
 									</div>
 								</div>
 								<div class="single-explore-txt bg-theme-1">
-									<h2><a href="#">Comparizon</a></h2>
+									<h2><a href="#">Comparison</a></h2>
 									
 									<div class="explore-person">
 										<div class="row">
@@ -339,8 +339,8 @@
 											</div>
 											<div class="col-sm-10">
 												<p>
-													<b>Comparizon</b><br>
-													This section discusses on the comparizon between data from channel 1 and channel 2.
+													<b>Comparison</b><br>
+													This section discusses on the comparison between data from channel 1 and channel 2.
 												</p>
 											</div>
 										</div>
