--- a/channel2DV.html
+++ b/channel2DV.html
@@ -102,7 +102,7 @@
 			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 			                    <li><a href="index.html">Home</a></li>
 			                    <li><a href="channel1DV.html">Channel 1</a></li>
-                                <li><a href="comparizon.html">Comparizon</a></li>
+                                <li><a href="comparizon.html">Comparison</a></li>
 			                    <!--<li class="scroll"><a href="#blog">blog</a></li>-->
 			                    <!--<li class="scroll"><a href="#contact">contact</a></li>-->
 			                </ul><!--/.nav -->
@@ -432,7 +432,7 @@ Author: mwa0000024241858
 			           	<div class="col-sm-9">
 			           		<ul class="footer-menu-item">
 			                    <li><a href="channel1DV.html">Channel 1</a></li>
-                                <li><a href="comparizon.html">Comparizon</a></li>
+                                <li><a href="comparizon.html">Comparison</a></li>
 			                </ul><!--/.nav -->
 			           	</div>
 		           </div>
