--- a/comparizon.html
+++ b/comparizon.html
@@ -12,7 +12,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
         
         <!-- title of site -->
-        <title>Comparizon</title>
+        <title>Comparison</title>
 
         <!-- For favicon png -->
 		<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
@@ -120,7 +120,7 @@
 		<section id="home" class="welcome-data3">
 			<div class="container">
 				<div class="welcome-hero-txt">
-					<h2>Comparizon between channel 1 and channel 2</h2>
+					<h2>Comparison between channel 1 and channel 2</h2>
 					<p>
 						Live IoT Analytics 
 					</p>
@@ -134,7 +134,7 @@
 		<section id="works" class="works">
 			<div class="container">
 				<div class="section-header">
-					<h2><u>Comparizon analysis</u></h2>
+					<h2><u>Comparison analysis</u></h2>
 				
 				<p style="text-align: left;">
 					With the growing concerns over air pollution and its impact on public health, real-time air quality 
@@ -176,12 +176,12 @@
 		<section id="explore" class="explore">
 			<div class="container">
 				<div class="section-header">
-					<h2>Results comparizon</h2>
+					<h2>Results comparison</h2>
 					<p>Comparison of ThingSpeak data and visualizations.</p><br><br><br>
 
                     <table style="color: black;">
                         <tr>
-                          <th colspan="3">Comparizon between channel 1 and channel 2</th>
+                          <th colspan="3">Comparison between channel 1 and channel 2</th>
                         </tr>
                         <tr>
                             <td>Data type</td>
