Fixed another spelling error. IssueID: PM_12

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 								<div class="single-explore-img">
 									<img src="assets/images/welcomeDV/comparison.png" alt="explore image">
 									<div class="single-explore-img-info">
-										<button onclick="window.location.href='comparison.html'">comparison</button>
+										<button onclick="window.location.href='comparizon.html'">comparison</button>
 										
 									</div>
 								</div>
