Change ThingSpeak title. IssueID: PM_13

--- a/channel2DV.html
+++ b/channel2DV.html
@@ -330,7 +330,7 @@ Author: mwa0000024241858
 					</div>
 					<br><br><br><br><p><b><u>PM2.5 and PM10 Correlation Readings and Data Visualizations</u></b></p>
 					<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2852320/charts/5?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=10000&title=PM10++Correlation&type=line&xaxis=Time&yaxis=%C2%B5g%2Fm3"></iframe>
-					<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2852320/charts/6?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=10000&title=PM2.5+Correlation&type=line&xaxis=Time&yaxis=%C2%B5g%2Fm3"></iframe>
+					<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2852320/charts/6?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=10000&title=PM2.5-10+Correlation&type=line&xaxis=Time&yaxis=%C2%B5g%2Fm3"></iframe>
 					<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/apps/matlab_visualizations/607844"></iframe>					<br><br><br>
 					<div class="boxContainer">
 						<div class="box">
