Fix NAQI unit error. IssueID: PM_14

--- a/comparizon.html
+++ b/comparizon.html
@@ -258,14 +258,14 @@
                             <p>
                                 <b>Channel 1:</b>
                                 <ul>
-                                    <li>-Initial high spike, then moderate, fluctuating pollution with periodic peaks (~150 µg/m³).</li>
+                                    <li>-Initial high spike, then moderate, fluctuating pollution with periodic peaks (~150).</li>
                                     <li>-Higher baseline, indicating persistent pollution.</li>
                                     <li>-Suggests continuous sources; long-term health risks.</li>
                                 </ul>
                                 <br>
                                 <b>Channel 2:</b>
                                 <ul>
-                                    <li>-Frequent, sharp, high-intensity spikes (~250-300 µg/m³), low baseline.</li>
+                                    <li>-Frequent, sharp, high-intensity spikes (~250-300), low baseline.</li>
                                     <li>-Indicates sporadic, short-term pollution events.</li>
                                     <li>-Requires real-time monitoring and rapid response.</li>
                                 </ul>
@@ -286,14 +286,14 @@
                             <p>
                                 <b>Channel 1:</b>
                                 <ul>
-                                    <li>-Initial high spike, then fluctuating, moderate pollution with periodic peaks (~600-700 µg/m³).</li>
-                                    <li>-Elevated baseline (~100-300 µg/m³), indicating persistent pollution.</li>
+                                    <li>-Initial high spike, then fluctuating, moderate pollution with periodic peaks (~600-700).</li>
+                                    <li>-Elevated baseline (~100-300), indicating persistent pollution.</li>
                                     <li>-Suggests continuous pollution sources; long-term health risks.</li>
                                 </ul>
                                 <br>
                                 <b>Channel 2:</b>
                                 <ul>
-                                    <li>-Frequent, sharp, high-intensity spikes (~800-1000 µg/m³), low baseline (~0-100 µg/m³).</li>
+                                    <li>-Frequent, sharp, high-intensity spikes (~800-1000 ), low baseline (~0-100).</li>
                                     <li>-Indicates sporadic, short-term pollution events.</li>
                                     <li>-Requires rapid response and real-time monitoring.</li>
                                 </ul>
