--- a/comparizon.html
+++ b/comparizon.html
@@ -336,7 +336,7 @@
                             <p>Channel 1 PM2.5 correlation</p><br>
                             <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2851826/charts/8?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=10000&title=PM%282.5-10%29+Correlation&type=line&xaxis=Time&yaxis=%C2%B5g%2Fm3"></iframe>
                             <p>Channel 2 PM2.5 correlation</p><br>
-                            <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2852320/charts/6?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=10000&title=PM2.5+Correlation&type=line&xaxis=Time&yaxis=%C2%B5g%2Fm3"></iframe>
+                            <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/2852320/charts/6?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=10000&title=PM%282.5-10%29+Correlation&type=line&xaxis=Time&yaxis=%C2%B5g%2Fm3"></iframe>
                         </td>
                           <td>
                             <p>
